deploy/roflanservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellokub
spec:
  selector:
    app: hellokub
  ports:
    - protocol: TCP
      name: tcp-roflankube
      port: 8081
      targetPort: 8080
